# BE_REPO

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: pre-commit.yml
Recsys/: coffee_beans_info.csv
config/: settings.py
