[tool.poetry]
name = "brewbuds"
version = "0.1.0"
description = ""
authors = ["hwstar-1204 <115150798+hwstar-1204@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
djangorestframework = "^3.15.2"
django-environ = "^0.11.2"
django-cors-headers = "^4.4.0"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
